[gd_scene load_steps=17 format=3 uid="uid://c60d3ymkiaiyy"]

[ext_resource type="Script" uid="uid://d26k6oiodixrw" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/Structure3DContainer/Rendering/rendering.gd" id="1_cucwc"]
[ext_resource type="PackedScene" uid="uid://eqyg3c15y82h" path="res://Scenes/Main/parts/Background/Background.tscn" id="2_lh6qf"]
[ext_resource type="Shader" uid="uid://cmqkpk1mn6eq7" path="res://CanvasShader/AudioShader/audio_shader_3.gdshader" id="2_uoiph"]
[ext_resource type="PackedScene" uid="uid://m74gitiqvwla" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/Structure3DContainer/Rendering/parts/Overview/Overview.tscn" id="2_urwmy"]
[ext_resource type="PackedScene" uid="uid://dk5255oi6br8j" path="res://Components/TransitionScreen/TransistionScreen.tscn" id="3_kgjio"]
[ext_resource type="PackedScene" uid="uid://c83wswsjxnmva" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/Structure3DContainer/Rendering/parts/Generator/Generator.tscn" id="4_dy8ob"]
[ext_resource type="PackedScene" uid="uid://2egdont4wbiv" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/ActionContainer/ControllerOverlay/ControllerOverlay.tscn" id="4_kgjio"]
[ext_resource type="Shader" uid="uid://dfudwt01nbo8a" path="res://Shader/HV_Interupt/hv_interupt.gdshader" id="4_ocl5o"]
[ext_resource type="PackedScene" uid="uid://bl0fcbjjnqeux" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/Structure3DContainer/Rendering/parts/Wing/Wing.tscn" id="4_ujma6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kgjio"]
shader = ExtResource("2_uoiph")
shader_parameter/speed = 0.2
shader_parameter/zoom = 3.0
shader_parameter/line_thickness = 0.05
shader_parameter/glow_strength = 1.097
shader_parameter/line_color = Color(0, 1, 1, 1)
shader_parameter/alpha = 0.419
shader_parameter/moving = true
shader_parameter/angle = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ocl5o"]
shader = ExtResource("4_ocl5o")
shader_parameter/enable_horizontal = true
shader_parameter/amplitude_h = 10.0
shader_parameter/frequency_h = 5.0
shader_parameter/speed_h = 1.0
shader_parameter/opacity_h = 1.0
shader_parameter/step_count_h = 6
shader_parameter/enable_vertical = true
shader_parameter/amplitude_v = 3.0
shader_parameter/frequency_v = 5.0
shader_parameter/speed_v = 1.0
shader_parameter/opacity_v = 1.0
shader_parameter/step_count_v = 6

[sub_resource type="ViewportTexture" id="ViewportTexture_0nplc"]
viewport_path = NodePath("SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_urwmy"]
viewport_path = NodePath("SubViewport/Rendering/OverviewScene/SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_pgdfi"]
viewport_path = NodePath("SubViewport/Rendering/WingScene/SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_kgjio"]
viewport_path = NodePath("SubViewport/Rendering/WingScene/SpriteB/SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_uoiph"]
viewport_path = NodePath("SubViewport/Rendering/GeneratorScene/SubViewport")

[node name="Rendering" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cucwc")

[node name="BGColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AudioVisualizer" parent="." instance=ExtResource("2_lh6qf")]
layout_mode = 1

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_kgjio")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.185383, 0.185383, 0.185383, 1)

[node name="NukeSplashContainer" type="Control" parent="."]
modulate = Color(1, 1, 1, 0.176471)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.190241
scale = Vector2(1.2, 1.2)
pivot_offset = Vector2(960, 540)

[node name="MainViewportTexture" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_ocl5o")
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = SubResource("ViewportTexture_0nplc")

[node name="TransitionScreen" parent="." instance=ExtResource("3_kgjio")]
layout_mode = 1

[node name="ControllerOverlay" parent="." instance=ExtResource("4_kgjio")]
visible = false
layout_mode = 1
show_directional = true

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(1920, 1080)

[node name="Rendering" type="Node3D" parent="SubViewport"]

[node name="OverviewScene" type="Node3D" parent="SubViewport/Rendering"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0)

[node name="SubViewport" type="SubViewport" parent="SubViewport/Rendering/OverviewScene"]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(1920, 1080)

[node name="OverviewNode" parent="SubViewport/Rendering/OverviewScene/SubViewport" instance=ExtResource("2_urwmy")]

[node name="OverviewCamera" type="Camera3D" parent="SubViewport/Rendering/OverviewScene"]
projection = 1
current = true
size = 1.2
far = 10.0

[node name="Sprite3D" type="Sprite3D" parent="SubViewport/Rendering/OverviewScene/OverviewCamera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
pixel_size = 0.001
texture = SubResource("ViewportTexture_urwmy")

[node name="WingScene" type="Node3D" parent="SubViewport/Rendering"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 0.999999, 2.89305, 0, 0)

[node name="WingCamera" type="Camera3D" parent="SubViewport/Rendering/WingScene"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0488782, 0, 0)
cull_mask = 1023
projection = 1
current = true
fov = 68.2
size = 1.35
near = 0.001
far = 20.0

[node name="SpriteA" type="Sprite3D" parent="SubViewport/Rendering/WingScene"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
visible = false
pixel_size = 0.0013
double_sided = false
texture = SubResource("ViewportTexture_pgdfi")

[node name="SpriteB" type="Sprite3D" parent="SubViewport/Rendering/WingScene"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
double_sided = false
no_depth_test = true
texture = SubResource("ViewportTexture_kgjio")

[node name="SubViewport" type="SubViewport" parent="SubViewport/Rendering/WingScene"]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(1920, 1080)

[node name="WingCurrentFloor" parent="SubViewport/Rendering/WingScene/SubViewport" instance=ExtResource("4_ujma6")]

[node name="GeneratorScene" type="Node3D" parent="SubViewport/Rendering"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 0.999999, 5.93274, 0, 0)
visible = false

[node name="SubViewport" type="SubViewport" parent="SubViewport/Rendering/GeneratorScene"]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(1920, 1080)

[node name="Generator" parent="SubViewport/Rendering/GeneratorScene/SubViewport" instance=ExtResource("4_dy8ob")]

[node name="GenCamera" type="Camera3D" parent="SubViewport/Rendering/GeneratorScene"]
cull_mask = 1023
projection = 1
current = true
fov = 52.2
far = 20.0

[node name="Sprite3D" type="Sprite3D" parent="SubViewport/Rendering/GeneratorScene/GenCamera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0533484, -1)
pixel_size = 0.0013
texture = SubResource("ViewportTexture_uoiph")
